--- a/tugas_bmi.ipynb
+++ b/tugas_bmi.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
     "    print('Underweight')\n",
     "elif bmi>=18.5 and bmi<25:\n",
     "    print(\"Normal (healthy weight)\")\n",
-    "elif bmi>= and bmi<30:\n",
+    "elif bmi>=25 and bmi<30:\n",
     "    print('Overweight')\n",
     "elif bmi>=30 and bmi<35:\n",
     "    print('Moderately obese')\n",
